Añadido cierto estilo a través de CSS:    - Cabecera, logo, separadores... Añadidos iconos en los elementos del árbol. Añadida validación en la entrada de datos de la interfaz de usuario. Eliminadas las trazas del log en el servidor.